# router-metrics

./: Dockerfile  cpe_target.py  docker-compose.yml  prometheus.yml  pyproject.toml  setup.cfg
src/router_metrics/: cpe_collector.py  pi_collector.py  target.py
tests/: test_cpe_target.py
tests/router_metrics/: test_cpe_collector.py  test_pi_collector.py  test_target.py
